# PatchingPE

./: .gitignore  pyproject.toml
anti-debug-dump/: anti-debugging-th.exe.exports.csv  broken-byte-calls.csv  broken-calls.csv  calls_patch.csv  game.exe.exports.csv  gather.xlsx  modules_metadata.csv  names-map.csv  thunks.csv  thunks_patch.csv
examples/: getsym.cpp  ret0.cpp
fake_neomon/: nigs.cpp  nigs.def
fake_neomon_host/: NeoMon.def  host-bind-reloc.cpp  host-bind.cpp  host-ntdll.cpp  loadbin.h
fake_neomon_host/tryfix/: ASLRtest.cpp  ASLRtest.ipynb
game-dump/: broken-analyzed-calls.csv  broken-byte-calls.csv  calls_patch.csv  game.exe.export.csv  game.exe.export.full.csv  names-map.csv  new_idt.csv  old-iat.csv  old_iat_patch.csv  thunks.csv  thunks_patch.csv
game-dump/dumps/: broken-analyzed-calls.csv  broken-byte-calls.csv  dump-imports.csv  old-iat.csv  old-iat.csv2.csv
game-dump/patches/: calls_patch.csv  (+1 more)
neomon-dump/: NeoMon.dll.export.full.csv  NeoMon.dll.import.full.csv
notebooks/: 01 assembling_calls_patch.ipynb  01-patch-v2.ipynb  02 patch_iat.ipynb  03 patch_idt.ipynb  04 applying_patch.ipynb  addr_helpers.py  bin_compare_lib.py  bincomp.ipynb  export_names.py  make_decorated_map.ipynb  make_decorated_map_from_csv.ipynb  manmapped.csv  patch-dll-v2.ipynb  patch-dll-v3.ipynb  patch-dll-v4.ipynb  temp.csv  tracelog.ipynb
scripts/: bin_compare.py  export-both-names.py  extract-analyzed-calls.py  extract-byte-calls.py  extract-old-iat.py  ida_patch.py  ida_patch_calls.py  ida_patch_thunks.py  map-calls-x64dbg.py  validate_imports.py
(+12 files in other folders)
