[project]
name = "patchingPE"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lief>=0.17.0",
    "numpy>=2.3.3",
    "pefile>=2024.8.26",
    "polars>=1.34.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = 'py312'
extend-include = ["*.ipynb"]
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
    'venv',
]

# Configure single quotes
[tool.ruff.format]
quote-style = 'double'
